--- a/Android/app/src/main/res/menu/menu_main.xml
+++ b/Android/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,7 @@
     >
 
     <item android:id="@+id/item_setting"
-        android:title="@string/item_settings"
+        android:title="@string/item_perfil"
         android:orderInCategory="100" app:showAsAction="never"/>
 
     <item android:id="@+id/item_criarGrupo"
@@ -17,9 +17,16 @@
         android:title="@string/item_sair"
         android:orderInCategory="200" app:showAsAction="never"/>
 
+    <item android:id="@+id/item_pesquisar"
+        android:title="Pesquisar"
+        android:orderInCategory="300" app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_search"/>
+
     <item android:id="@+id/item_midia"
         android:title="@string/item_midia"
         android:orderInCategory="300" app:showAsAction="ifRoom"
         android:icon="@drawable/ic_attach_file"/>
+
+
 
 </menu>
