--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,9 @@
     android:clipToPadding="true"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/fundo"
@@ -42,8 +44,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtlayout_login"
-            android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp"
             android:theme="@style/MyEditTextTheme"
@@ -57,7 +59,7 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/et_login"
-                android:layout_width="353dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/hint_login"
                 android:inputType="text"
@@ -81,7 +83,7 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/et_senha"
-                android:layout_width="358dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/hint_senha"
                 android:inputType="textPassword"
@@ -142,15 +144,6 @@
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="@+id/txtlayout_senha"
             app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha" />
-
-        <Button
-            android:id="@+id/btnTeste"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Button"
-            tools:layout_editor_absoluteX="131dp"
-            tools:layout_editor_absoluteY="547dp"
-            tools:text="Ola Mundo" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
