--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -7,9 +7,7 @@
     android:clipToPadding="true"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/fundo"
@@ -144,6 +142,20 @@
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="@+id/txtlayout_senha"
             app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha" />
+
+        <Button
+            android:id="@+id/ListAlun"
+            android:layout_width="wrap_content"
+            android:layout_height="77dp"
+            android:layout_marginStart="148dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="8dp"
+            android:onClick="telaListar"
+            android:text="Listar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
