--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,12 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="0dp" />
 
+    <Button
+        android:id="@+id/listarAlunos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Listar Alunos"
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="342dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
