--- a/Android/app/src/main/res/layout/activity_tela_cad_usuario.xml
+++ b/Android/app/src/main/res/layout/activity_tela_cad_usuario.xml
@@ -150,8 +150,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
-        android:theme="@style/botaopadrao"
+        android:onClick="salvar"
         android:text="@string/btn_salvar"
+        android:theme="@style/botaopadrao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editSemestre" />
