--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#8A084B</color>
     <color name="colorAccent">#FF0080</color>
     <color name="textColorPrimary">#000000</color>
-    <color name="colorPrimaryBotton">#F2EFFB</color>
+    <color name="colorPrimaryBotton">#FFEEFE</color>
 </resources>
