--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -71,6 +71,7 @@
             android:layout_height="57dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimaryBotton"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
