--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimaryBotton"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -143,20 +144,6 @@
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="@+id/txtlayout_senha"
             app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha" />
-
-        <Button
-            android:id="@+id/ListAlun"
-            android:layout_width="wrap_content"
-            android:layout_height="77dp"
-            android:layout_marginStart="148dp"
-            android:layout_marginTop="72dp"
-            android:layout_marginEnd="8dp"
-            android:onClick="telaListar"
-            android:text="Listar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
