--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -145,6 +145,19 @@
             app:layout_constraintStart_toStartOf="@+id/txtlayout_senha"
             app:layout_constraintTop_toBottomOf="@+id/txtlayout_senha" />
 
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="140dp"
+            android:layout_marginEnd="8dp"
+            android:text="Button"
+            android:onClick="entrarChat"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/btnEntrar" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
