--- a/Android/app/src/main/res/layout/activity_chat_tela.xml
+++ b/Android/app/src/main/res/layout/activity_chat_tela.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:ems="10"
-            android:hint="Write a message"
+            android:hint="Escreva uma mensagem"
             android:inputType="text"
             android:paddingHorizontal="10dp"
             android:text="" />
@@ -39,7 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
-            android:background="@drawable/ic_done"
+            android:background="@drawable/ic_action_send"
+            android:backgroundTint="@color/colorPrimary"
             android:padding="20dp"
             android:scaleType="fitCenter"
             android:onClick="sendMessage"
