--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF0080</color>
     <color name="textColorPrimary">#000000</color>
     <color name="colorPrimaryBotton">#FFEEFE</color>
+    <color name="myMessage">#AD1457</color>
+    <color name="thereMessage">#F50057</color>
+    <color name="DataHora">#9E9E9E</color>
+    <color name="textColor">#ffff</color>
+
 </resources>
