--- a/Android/app/src/main/res/values/styles.xml
+++ b/Android/app/src/main/res/values/styles.xml
@@ -28,10 +28,17 @@
     </style>
 
     <style name="MyTextTheme">
-
         <item name="colorPrimary">@color/colorPrimary</item>
-
     </style>
+
+    <style name="MyMessage">
+        <item name="myMessage">@color/myMessageColor</item>
+    </style>
+
+    <style name="TherMessage">
+        <item name="thereMessages">@color/therMessageColor</item>
+    </style>
+
 
 
 </resources>
